--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Micro templating engine for strings only.",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover _mocha --report lcovonly -- -R spec test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "coverage": "istanbul cover _mocha test --bail"
+    "lint": "standard",
+    "pretest": "npm run lint",
+    "test": "japa"
   },
   "keywords": [
     "template",
@@ -20,7 +21,8 @@
   "devDependencies": {
     "coveralls": "^2.11.4",
     "japa": "^1.0.5",
-    "japa-cli": "^1.0.1"
+    "japa-cli": "^1.0.1",
+    "standard": "^10.0.3"
   },
   "directories": {
     "test": "test"
