--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pope",
   "version": "1.0.4",
-  "description": "Micro templating engine for strings only.",
+  "description": "Zero dependency micro templating engine for strings only.",
   "main": "index.js",
   "scripts": {
     "lint": "standard",
