--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/pope.es.js",
   "browser": "dist/pope.browser.js",
   "scripts": {
-    "lint": "standard",
+    "lint": "standard index.js test/*",
     "pretest": "npm run lint",
     "test": "japa"
   },
