--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "standard index.js test/*",
     "pretest": "npm run lint",
-    "test": "japa"
+    "test": "node test/pope.spec.js"
   },
   "keywords": [
     "template",
@@ -21,12 +21,11 @@
   "author": "amanvirk",
   "license": "MIT",
   "devDependencies": {
-    "coveralls": "^2.11.4",
-    "japa": "^1.0.5",
-    "japa-cli": "^1.0.1",
-    "rollup": "^0.52.0",
-    "rollup-plugin-uglify": "^4.0.0",
-    "standard": "^10.0.3",
+    "coveralls": "^3.1.0",
+    "japa": "^3.1.1",
+    "rollup": "^2.42.2",
+    "rollup-plugin-uglify": "^6.0.4",
+    "standard": "^16.0.3",
     "uglify-es": "^3.2.0"
   },
   "directories": {
